# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ['packages/*']
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["HomyeeKing <HomyeeKing@gmail.com>"]
repository = "https://github.com/HomyeeKing/gito"
homepage = "https://github.com/HomyeeKing/gito"
keywords = ["git", "cli"]
readme = "README.md"
license = "MIT"

[profile.release]
lto = true